# device_board_lockzhiner

./: BUILD.gn  Kconfig.liteos_m.boards  Kconfig.liteos_m.defconfig.boards  OAT.xml  README.en.md  README.md  README_zh.md
lingpi/: BUILD.gn  Kconfig.liteos_m.board
lingpi/liteos_m/: BUILD.gn  config.gni
lockzhiner_rk2206/liteos_m/: BUILD.gn
