# Copyright (c) 2022 FuZhou Lockzhiner Electronic Co., Ltd. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Kernel type, e.g. "linux", "liteos_a", "liteos_m".
kernel_type = "liteos_m"

# Kernel version.
kernel_version = "3.0.0"

# Board CPU type, e.g. "cortex-a7", "riscv32".
board_cpu = "cortex-m4"

# Board arch, e.g.  "armv7-a", "rv32imac".
board_arch = ""

# Toolchain name used for system compiling.
# E.g. gcc-arm-none-eabi, arm-linux-harmonyeabi-gcc, ohos-clang,  riscv32-unknown-elf.
# Note: The default toolchain is "ohos-clang". It's not mandatory if you use the default toochain.
board_toolchain = "arm-none-eabi-gcc"

use_board_toolchain = true

# The toolchain path instatlled, it's not mandatory if you have added toolchian path to your ~/.bashrc.
board_toolchain_path = ""

# Compiler prefix.
board_toolchain_prefix = "arm-none-eabi-"

# Compiler type, "gcc" or "clang".
board_toolchain_type = "gcc"

# xts ldflags
board_ld_flags_xts = [
  "-Wl,--start-group",
  "-Wl,--whole-archive",

  # xts测试套件
  "-lhal_update_static",
  "-lhctest",
  "-lhota",
  "-lhuks_test_common",
  "-lmodule_ActsBootstrapTest",
  "-lmodule_ActsDfxFuncTest",
  "-lmodule_ActsHieventLiteTest",
  "-lmodule_ActsHuksHalFunctionTest",
  "-lmodule_ActsKvStoreTest",
  "-lmodule_ActsParameterTest",
  "-lmodule_ActsSamgrTest",
  "-lmodule_ActsUpdaterFuncTest",
  "-lmodule_ActsUtilsFileTest",
  "-lmodule_ActsWifiIotTest",
  "-lmodule_ActsWifiServiceTest",
  "-Wl,--no-whole-archive",
  "-Wl,--end-group",
]

# lockzhiner applications
board_ld_flags_lockzhiner = [
  "-Llibs",
  "-lblackbox",
  "-lhal_wifiaware",
  "-lhal_token_static",
  "-lhidumper_mini",
  "-lhilog_static",
  "-lmbedtls",
  "-lmusl-c",
  "-lmusl-m",
  "-lsamgr",
  "-lsamgr_adapter",
  "-lsamgr_source",
  "-lwifiaware",
  "-lwifiservice",

  # 特殊处理的静态库
  "-Wl,--start-group",
  "-Wl,--whole-archive",
  "-lbootstrap",
  "-lhardware",
  "-lkernel",
  "-lhal_iothardware",
  "-lcjson_static",
  "-Wl,--no-whole-archive",
  "-Wl,--end-group",
]

# Board related common compile flags.
board_cflags = [
  "-nostartfiles",
  "-std=c99",
  "--inline",
  "-ggdb",
  "-gdwarf-2",
  "-O0",
  "-ffunction-sections",
  "-fdata-sections",
  "-mcpu=cortex-m4",
  "-mthumb",
  "-mthumb-interwork",
  "-mfloat-abi=soft",
  "-mfpu=fpv4-sp-d16",
  "-mapcs-frame",
  "-MD",
  "-fno-stack-protector",
  "-Wall",
  "-D_BSD_SOURCE",
]
board_cxx_flags = []
board_ld_flags = [
  "-nostartfiles",
  "-ffunction-sections",
  "-fdata-sections",
  "-mcpu=cortex-m4",
  "-mthumb",
  "-mthumb-interwork",
  "-mapcs-frame",
  "-mfloat-abi=soft",
  "-mfpu=fpv4-sp-d16",
  "-Wl,-Tbin/board.ld",
  "-nostdlib",
  "--specs=nosys.specs",
  "-Wl,--wrap=printf",
  "-Wl,--wrap=sprintf",
  "-Wl,--wrap=snprintf",
  "-Wl,--wrap=vsnprintf",
  "-Wl,--wrap=vprintf",
  "-Wl,--gc-sections",
  "-Wl,--start-group",
  "-Wl,--whole-archive",
  "-lgcc",
  "-Wl,--no-whole-archive",
  "-Wl,--end-group",
  "-Wl,-Map=OHOS_Image.map,--cref",
  "-Wl,--gc-sections",
]
board_ld_flags += board_ld_flags_lockzhiner

#board_ld_flags += board_ld_flags_xts

# Board related headfiles search path.
board_include_dirs = [
  "//device/soc/rockchip/rk2206/hardware/include",
  "//device/soc/rockchip/rk2206/hardware/lib/CMSIS/Device/RK2206/Include",
  "//third_party/musl/porting/liteos_m/kernel/include",
  "//utils/native/lite/include",
  "//third_party/mbedtls/include",
  "//commonlibrary/utils_lite/include",
]

# Board adapter dir for OHOS components.
board_adapter_dir = "//device/soc/rockchip/rk2206/adapter"

# Sysroot path.
board_configed_sysroot = ""

# Board storage type, it used for file system generation.
storage_type = ""
